css/style.css
/* :root {
	--primary-color: #fff;
	--dark-color: #141414;
} */

:root {
	/* --primary-color: #e50914; */
	--primary-color: #a708f1;
	--dark-color: #141414;

	/* background-color: #a708f1;  */
	/* For browsers that do not support gradients */
	/* background-image: linear-gradient(
		to right,
		#000000,
		#5c21a5,
		#8c269c,
		#000000
	);  */
	/* Standard syntax (must be last) */
}

* {
	background-origin: border-box;
	margin: 0;
	padding: 0;
}

body {
	/* font-family: 'Ariel', sans-serif; */
	font-family: 'Roboto', sans-serif;
	-webkit-font-smoothing: antialiased;
	/* background: #000; */
	color: #999;
	/* font-weight: 300; */
}

a {
	color: rgb(182, 182, 182);
	text-decoration: none;
}

a:hover {
	color: #fff;
}

p {
	margin: 0.5rem 0;
}

li {
	/* display: inline; */
	list-style-type: none;
}

/* img {
	width: 100%;
} */

hr {
	height: 1px;
	background-color: #ccc;
	border: none;
	margin: 0;
}

.container2 {
	padding-right: 2rem;
	padding-left: 2rem;
}

/* .scroll-style {
	max-height: 150px;
	overflow-x: scroll;
} */

/* img {
	width: 100%;
} */
/* 
#top-summary {
	width: 100%;
	height: 100vh;
	background: url('../img/15bzC.jpg') no-repeat center center/cover;
}

#top-summary::after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: rgba(0, 0, 0, 0.6);
	box-shadow: inset 570px 100px 250px #000000, inset 0px -20px 250px #000000;
} */

.showcase {
	/* width: 100%; */
	width: 100vw;
	height: 100vh;
	position: relative;
	/* background: url('../img/goldabstractbackground.jpg') no-repeat center center/cover; */
	/* background: url('../img/15bzC.jpg') no-repeat center center/cover; */
	background: url('../img/iflix-bg.jpg') no-repeat center center/cover;
}

.showcase::after,
.celebrity-moves-content::after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: rgba(0, 0, 0, 0.2);
	box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;

	/* background: rgba(54, 56, 57, 0.6); */
	/* box-shadow: inset 600px 100px 250px #000000; */
	/* box-shadow: inset 570px 100px 250px #282828, inset 0px -20px 250px #282828; */
	/* box-shadow: inset 570px 100px 250px #393b3d, inset 0px -20px 250px #393b3d; */
}

/* .showcase img {
	width: 170px;
	position: absolute;
	top: 50%;
	left: 12%;
	transform: translate(-50%, -50%);
} */

.showcase img {
	width: 300px;
	/* height: 160px; */
	position: absolute;
	top: 110%;
	left: 12%;
	transform: translate(-50%, -50%);
}

.showcase-top {
	position: relative;
	z-index: 2;
	height: 90px;
}

.showcase-top a {
	position: absolute;
	top: 50%;
	right: 0;
	transform: translate(-50%, -50%);
}

.showcase-content {
	position: relative;
	z-index: 2;
	/* margin: auto; */
		margin-top: 8rem;
	/* margin: 5rem 0; */
	display: flex;
	flex-direction: column;
	justify-content: center;
	/* align-items: left; */
	align-items: center;
	text-align: center;

}

.showcase-content h1,
.flix-fight-content h1 {
	font-weight: 600;
	/* font-family: 'Caveat', cursive; */
	/* font-family: 'Ariel', sans-serif; */
	font-family: Arial, Helvetica, sans-serif;
	font-size: 3.4rem;
	line-height: 1.1;
	letter-spacing: -1.3px;
	margin: 0 0 1rem;
	width: 66vw;
	color: #fff;
	/* color: #9400d3; */
}


.flix-fight-content h1 {
	/* margin-top: 7rem; */
	margin-top: 4rem;
	position: relative;
	z-index: 2;
}

.showcase-content p{
	font-family: sans-serif;
	/* font-weight: 400 !important; */
	font-size: 3rem;
}


.showcase-content p,
.flix-fight-content p {
	/* text-transform: uppercase; */
	color: #fff;
	font-weight: 400;
	font-size: 1.7rem;
	letter-spacing: 0.05rem;
	line-height: 1.25;
	margin: 0 0 2rem;
}
.showcase-content p:nth-child(2){
	margin: 0 0  1.5rem 0;
}
.flix-fight-content p {
	position: relative;
	z-index: 2;
}

.showcase-content p#small-txt {
	font-size: 1.2rem;
	margin: 0 0  1.3rem 0;
}

.showcase-content a {
	font-size: 1.9rem;
	font-weight: 400;
}

/* .showcase-content .fa-film {
	font-size: 6rem;
	color: #daa520;
} */


/* .dropdown-item {
	display: flex;
	align-items: center;
	height: 60px;
}

.dropdown-item img {
	height: 50px;
	margin-right: 10px;
} */

.grad1 {
	background-color: #a708f1; /* For browsers that do not support gradients */
	background-image: linear-gradient(to right, #5c21a5, #8c269c, #a708f1); /* Standard syntax (must be last) */
}

.grad2 {
	background-color: #a708f1; /* For browsers that do not support gradients */
	background-image: linear-gradient(
		to right,
		#000000,
		#5c21a5,
		#8c269c,
		#000000
	); /* Standard syntax (must be last) */
}

.grad3 {
	background-color: #1c1c1d; /* For browsers that do not support gradients */
	background-image: linear-gradient(to bottom, #000000, #484a4d, #2a2b2c, #000000);
	background-image: linear-gradient(to bottom, #000000, #2a2b2c, #484a4d, #000000);
}

.grad4 {
	background-color: #1c1c1d; /* For browsers that do not support gradients */
	background-image: linear-gradient(to bottom, #38393a, #1c1c1d);
}

.grad4:hover {
	background-image: linear-gradient(to bottom, #3f4041, #2b2b2c);
}

.showcase-content p strong {
	font-size: 3rem;
	font-family: 'Caveat', cursive;
	color: #800000;
}

/* .btn {
	display: inline-block; */
/* background: var(--primary-color); */
/* background: #a708f1; */
/* color: #fff;
	padding: 0.4rem 1.3rem;
	font-size: 1rem;
	text-align: center;
	border: none;
	cursor: pointer;
	margin-right: 0.5rem;
	outline: none;
	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
	border-radius: 2px;
}

.btn-xl {
	font-size: 2rem;
	padding: 1.5rem 2.1rem;
	text-transform: uppercase;
} */

.showcase-content a {
	/* color: #fff; */
	/* text-decoration: none; */
	letter-spacing: 0.05rem;
}

/* Styles for top search section */

#top-search-content {
	background: #000000;
	padding-top: 2rem;
	padding-bottom: 2rem;
}

#top-search-content .column .close {
	text-align: right;
	cursor: pointer;
	margin-bottom: -1.5rem;
}

#top-search-content .column .close:hover {
	color: #ccc;
}
/* ... */

